--- a/index.html
+++ b/index.html
@@ -1,1 +1,103 @@
+<!DOCTYPE html>
+<html lang="tr">
 
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Yanınızdayız | Dijital Usta</title>
+  <link rel="preconnect" href="https://api.dijitalusta.net" />
+  <link rel="stylesheet" href="./s/site.css?v=1" />
+<link rel="icon" type="image/x-icon" href="./s/favicon.ico" />
+</head>
+
+<body>
+  <header>
+    <a href="./"><img src="./s/logo.png" alt="Dijital Usta" /></a>
+    <h1>Yanınızdayız Projesi</h1>
+  </header>
+  <main>
+    <section>
+        <h1>Geleceği Birlikte İnşa Ediyoruz</h1>
+        <p>Deprem bölgesindeki girişimci adaylarını ve yerel işletmeleri dijital dünyayla buluşturuyoruz.<br/> Hem istihdamı artırıyor hem de yerel ekonomiyi e-ticaretle güçlendiriyoruz.</p>
+    </section>
+    <section class="centered">
+        <h2>Yanınızdayız Projesi Nedir?</h2>
+        <p>T.C. Ticaret Bakanlığı himayelerinde; Trendyol, TOBB ve MÜSİAD iş birliğiyle hayata geçirilen bu proje, bölgenin yeniden cazibe merkezi haline gelmesini hedefliyor. Amacımız; girişimci adaylarına dijital yetkinlikler kazandırmak, KOBİ'lerin e-ticaret hacmini büyütmek ve bölge istihdamına kalıcı katkı sağlamaktır.</p>
+        <p>Proje bölgedeki bireylerin, KOBİ'ler ile kooperatif ve esnafların katılımına açıktır.</p>
+        <p>Proje deprem bölgesindeki 4 pilot ilimizde uygulanmaktadır.</p>
+        <ul class="cities"><li>Adıyaman</li><li>Hatay</li><li>Kahramanmaraş</li><li>Malatya</li></ul>
+    </section>
+    <section class="split-section">
+        <div class="split-left">
+            <div class="content">
+                <h2>Geleceğin Dijital Ustası Olmak İstiyorum</h2>
+                <i>Kendini geliştir, iş fırsatlarını yakala veya kendi girişimini kur.</i>
+                <h3>Sana Ne Sağlıyoruz?</h3>
+                <ul>
+                    <li><b>Ücretsiz Eğitimler:</b> Yapay Zeka kullanımı ve Dijital Pazarlama alanlarında kapsamlı eğitimler.</li>
+                    <li><b>İstihdam Fırsatı:</b> Eğitimi başarıyla tamamlayanlar, bölgedeki KOBİ'ler tarafından istihdam edilme şansı yakalar.</li>
+                    <li><b>Girişimcilik Desteği:</b> Kendi işini kurmak istersen, Trendyol Mağaza'da 6 ay süreyle komisyonsuz satış avantajı seni bekliyor.</li>
+                </ul>
+                <h3>Kimler Başvurabilir?</h3>
+                <ul>
+                    <li>Adıyaman, Hatay, Kahramanmaraş veya Malatya'da ikamet edenler.</li>
+                    <li>Bir kurumda çalışmayanlar ve en az lise mezunu olanlar.</li>
+                    <li>18-30 yaş arası gençler.</li>
+                    <li>18 yaş üstü kadınlar.</li>
+                    <li><u>Not: Engelli bireylerin katılımında başka bir şart aranmamaktadır.</u></li>
+                </ul>
+                <a href="birey.html">BİREYSEL BAŞVURU YAP</a>
+            </div>
+        </div>
+        <div class="split-right">
+            <div class="content">
+                <h2>İşletmemi Büyütmek İstiyorum</h2>
+                <i>E-ticaretle sınırları aşın, nitelikli personel desteğiyle gücünüze güç katın.</i>
+                <h3>Sana Ne Sağlıyoruz?</h3>
+                <ul>
+                    <li><b>Komisyon Avantajı:</b> Proje kapsamında eğitim alan bir genci 12 ay istihdam etmeniz durumunda, Trendyol Mağaza'da 1 yıl süreyle komisyonsuz satış avantajından faydalanırsınız.</li>
+                    <li><b>Nitelikli İstihdam:</b> Dijitalleşme ve e-ticaret eğitimi almış donanımlı personellerle çalışma imkanı.</li>
+                </ul>
+                <h3>Kimler Başvurabilir?</h3>
+                <ul>
+                    <li>Merkezi ve vergi kaydı Adıyaman, Hatay, Kahramanmaraş veya Malatya'da olanlar.</li>
+                    <li>En az 2 yıldır faaliyet gösteren ticari işletmeler.</li>
+                    <li>Aylık satış hacmi 100.000 TL'nin altında olanlar.</li>
+                    <li>Satılan ürünleri e-ticaret mevzuatına uygun olanlar.</li>
+                </ul>
+                <a href="kobi.html">KOBİ BAŞVURUSU YAP</a>
+            </div>
+        </div>
+    </section>
+    <section>
+        <h2>Hangi Eğitimleri Alacaksınız?</h2>
+        <h2>Dijital dünyanın kapılarını aralayan, Trendyol Akademi destekli programımızda sizi neler bekliyor?</h2>
+        <ul>
+            <li><b>💻 E-Ticaret ve Dijitalleşme:</b> Temel ve ileri seviye yetkinlikler.</li>
+            <li><b>🤖 Yapay Zeka (AI):</b> İş süreçlerinde ve dijital pazarlamada yapay zeka kullanımı.</li>
+            <li><b>🤝 Müşteri İlişkileri:</b> Trendyol Akademi Müşteri İlişkileri ve Panel Eğitimi.</li>
+        </ul>
+    </section>
+
+  </main>
+  <footer>
+    <div class="footer-main">
+      <div class="footer-content">
+        <span>
+          <h1>Dijital Usta</h1>
+          <p>Gençleri e-ticaretle buluşturup<br/>KOBİ'lere yetkin iş gücü kazandırmayı amaçlar.</p>
+        </span>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <div class="footer-content">
+        © 2025 Dijital Usta | Tüm Haklar Saklıdır.
+        <a href="https://panel.dijitalusta.net/concent.html">KVKK Aydınlatma Metni ve Açık Rıza Formu</a>
+      </div>
+    </div>
+  </footer>
+  <script src="./s/site.js?v=1" defer></script>
+  <script src="./s/code/pages/index.js?v=1" defer></script>
+</body>
+
+</html>
