--- a/index.html
+++ b/index.html
@@ -13,61 +13,56 @@
 <body>
   <header>
     <a href="./"><img src="./s/logo.png" alt="Dijital Usta" /></a>
-    <h1>Yanınızdayız Projesi</h1>
+    <h1>Geleceği Birlikte İnşa Ediyoruz</h1>
   </header>
   <main>
     <section>
-        <h1>Geleceği Birlikte İnşa Ediyoruz</h1>
-        <p>Deprem bölgesindeki girişimci adaylarını ve yerel işletmeleri dijital dünyayla buluşturuyoruz.<br/> Hem istihdamı artırıyor hem de yerel ekonomiyi e-ticaretle güçlendiriyoruz.</p>
+        <h1>Yanınızdayız Projesi</h1>
+        <p>Deprem bölgesindeki girişimci adaylarını ve yerel işletmeleri dijital dünyayla buluşturuyoruz. Hem istihdama katkı sağlıyor hem de yerel ekonomiyi e-ticaretle güçlendiriyoruz.</p>
     </section>
     <section class="centered">
         <h2>Yanınızdayız Projesi Nedir?</h2>
-        <p>T.C. Ticaret Bakanlığı himayelerinde; Trendyol, TOBB ve MÜSİAD iş birliğiyle hayata geçirilen bu proje, bölgenin yeniden cazibe merkezi haline gelmesini hedefliyor. Amacımız; girişimci adaylarına dijital yetkinlikler kazandırmak, KOBİ'lerin e-ticaret hacmini büyütmek ve bölge istihdamına kalıcı katkı sağlamaktır.</p>
-        <p>Proje bölgedeki bireylerin, KOBİ'ler ile kooperatif ve esnafların katılımına açıktır.</p>
-        <p>Proje deprem bölgesindeki 4 pilot ilimizde uygulanmaktadır.</p>
+        <p>T.C. Ticaret Bakanlığı himayelerinde, Trendyol, TOBB ve MÜSİAD iş birliğiyle hayata geçirilen Dijital Usta Yanınızdayız projesi, bölgenin yeniden cazibe merkezi haline gelmesini hedefliyor. Amacımız girişimci adaylarına dijital yetkinlikler kazandırmak, KOBİ'lerin e-ticaret hacmini büyütmek ve bölge istihdamına katkı sağlamaktır.</p>
+        <p>Proje bölgedeki bireylerin, KOBİ’lerin, kooperatiflerin ve esnafların katılımına açıktır.</p>
+        <p>Proje deprem bölgesindeki 4 pilot ilde uygulanmaktadır.</p>
         <ul class="cities"><li>Adıyaman</li><li>Hatay</li><li>Kahramanmaraş</li><li>Malatya</li></ul>
     </section>
-    <section class="split-section">
-        <div class="split-left">
-            <div class="content">
-                <h2>Geleceğin Dijital Ustası Olmak İstiyorum</h2>
-                <i>Kendini geliştir, iş fırsatlarını yakala veya kendi girişimini kur.</i>
-                <h3>Sana Ne Sağlıyoruz?</h3>
-                <ul>
-                    <li><b>Ücretsiz Eğitimler:</b> Yapay Zeka kullanımı ve Dijital Pazarlama alanlarında kapsamlı eğitimler.</li>
-                    <li><b>İstihdam Fırsatı:</b> Eğitimi başarıyla tamamlayanlar, bölgedeki KOBİ'ler tarafından istihdam edilme şansı yakalar.</li>
-                    <li><b>Girişimcilik Desteği:</b> Kendi işini kurmak istersen, Trendyol Mağaza'da 6 ay süreyle komisyonsuz satış avantajı seni bekliyor.</li>
-                </ul>
-                <h3>Kimler Başvurabilir?</h3>
-                <ul>
-                    <li>Adıyaman, Hatay, Kahramanmaraş veya Malatya'da ikamet edenler.</li>
-                    <li>Bir kurumda çalışmayanlar ve en az lise mezunu olanlar.</li>
-                    <li>18-30 yaş arası gençler.</li>
-                    <li>18 yaş üstü kadınlar.</li>
-                    <li><u>Not: Engelli bireylerin katılımında başka bir şart aranmamaktadır.</u></li>
-                </ul>
-                <a href="birey.html">BİREYSEL BAŞVURU YAP</a>
-            </div>
-        </div>
-        <div class="split-right">
-            <div class="content">
-                <h2>İşletmemi Büyütmek İstiyorum</h2>
-                <i>E-ticaretle sınırları aşın, nitelikli personel desteğiyle gücünüze güç katın.</i>
-                <h3>Sana Ne Sağlıyoruz?</h3>
-                <ul>
-                    <li><b>Komisyon Avantajı:</b> Proje kapsamında eğitim alan bir genci 12 ay istihdam etmeniz durumunda, Trendyol Mağaza'da 1 yıl süreyle komisyonsuz satış avantajından faydalanırsınız.</li>
-                    <li><b>Nitelikli İstihdam:</b> Dijitalleşme ve e-ticaret eğitimi almış donanımlı personellerle çalışma imkanı.</li>
-                </ul>
-                <h3>Kimler Başvurabilir?</h3>
-                <ul>
-                    <li>Merkezi ve vergi kaydı Adıyaman, Hatay, Kahramanmaraş veya Malatya'da olanlar.</li>
-                    <li>En az 2 yıldır faaliyet gösteren ticari işletmeler.</li>
-                    <li>Aylık satış hacmi 100.000 TL'nin altında olanlar.</li>
-                    <li>Satılan ürünleri e-ticaret mevzuatına uygun olanlar.</li>
-                </ul>
-                <a href="kobi.html">KOBİ BAŞVURUSU YAP</a>
-            </div>
-        </div>
+    <section class="split">
+<div>
+<h2>Geleceğin Dijital Ustası Olmak İstiyorum</h2>
+<i>Kendini geliştir, iş fırsatlarını yakala veya kendi girişimini kur.</i>
+<h3>Sana Ne Sağlıyoruz?</h3>
+<ul>
+<li><b>Ücretsiz Eğitimler:</b> Yapay zeka kullanımı ve dijital pazarlama alanlarında kapsamlı eğitimler.</li>
+<li><b>İstihdam Fırsatı:</b> Eğitimi başarıyla tamamlayanlar, bölgedeki KOBİ'ler tarafından istihdam edilme şansı yakalar.</li>
+<li><b>Girişimcilik Desteği:</b> Kendi işinizi kurmak isterseniz, Trendyol’daki mağazanızda belirli süreli komisyon avantajları sizi bekliyor.</li>
+</ul>
+<h3>Kimler Başvurabilir?</h3>
+<ul>
+<li>Adıyaman, Hatay, Kahramanmaraş veya Malatya'da ikamet edenler.</li>
+<li>Bir kurumda çalışmayanlar ve en az lise mezunu olanlar.</li>
+<li>18-30 yaş arası gençler.</li>
+<li><u>Not: Engelli bireylerin katılımında başka bir şart aranmamaktadır.</u></li>
+</ul>
+<a href="birey.html">BİREYSEL BAŞVURU YAP</a>
+</div>
+<div>
+<h2>İşletmemi Büyütmek İstiyorum</h2>
+<i>E-ticaretle sınırları aşın, nitelikli personel desteğiyle gücünüze güç katın.</i>
+<h3>Sana Ne Sağlıyoruz?</h3>
+<ul>
+<li><b>Komisyon Avantajı:</b> Proje kapsamında eğitim alan bir genci 12 ay istihdam etmeniz durumunda, Trendyol mağazada komisyon desteği ile satış avantajından faydalanırsınız.</li>
+<li><b>Nitelikli İstihdam:</b> Dijitalleşme ve e-ticaret eğitimi almış donanımlı uzmanlarla çalışma imkânı.</li>
+</ul>
+<h3>Kimler Başvurabilir?</h3>
+<ul>
+<li>Merkezi ve vergi kaydı Adıyaman, Hatay, Kahramanmaraş veya Malatya'da olanlar.</li>
+<li>En az 2 yıldır faaliyet gösteren ticari işletmeler.</li>
+<li>Aylık satış hacmi 100.000 TL'nin altında olanlar.</li>
+<li>Satılan ürünleri e-ticaret mevzuatına uygun olanlar.</li>
+</ul>
+<a href="kobi.html">KOBİ BAŞVURUSU YAP</a>
+</div>
     </section>
     <section>
         <h2>Hangi Eğitimleri Alacaksınız?</h2>
@@ -87,6 +82,12 @@
           <h1>Dijital Usta</h1>
           <p>Gençleri e-ticaretle buluşturup<br/>KOBİ'lere yetkin iş gücü kazandırmayı amaçlar.</p>
         </span>
+        <div class="footer-logos">
+          <img src="./s/ticaret.png" alt="T.C. Ticaret Bakanlığı" />
+          <img src="./s/tobb.png" alt="TOBB" />
+          <img src="./s/trendyol.png" alt="Trendyol" />
+          <img src="./s/musiad.png" alt="MÜSİAD" />
+        </div>
       </div>
     </div>
     <div class="footer-bottom">
