--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <li>18-30 yaş arası gençler.</li>
 <li><u>Not: Engelli bireylerin katılımında başka bir şart aranmamaktadır.</u></li>
 </ul>
-<a href="birey.html">BİREYSEL BAŞVURU YAP</a>
+<div class="button-row"><a href="birey.html">BİREYSEL BAŞVURU YAP</a></div>
 </div>
 <div>
 <h2>İşletmemi Büyütmek İstiyorum</h2>
