--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
   <main>
     <section>
         <h1>Yanınızdayız Projesi</h1>
-        <p>Deprem bölgesindeki girişimci adaylarını ve yerel işletmeleri dijital dünyayla buluşturuyoruz. Hem istihdama katkı sağlıyor hem de yerel ekonomiyi e-ticaretle güçlendiriyoruz.</p>
+        <p>Deprem bölgesindeki girişimci adaylarını ve yerel işletmeleri dijital dünyayla buluşturuyoruz.<br/>Hem istihdama katkı sağlıyor hem de yerel ekonomiyi e-ticaretle güçlendiriyoruz.</p>
     </section>
     <section class="centered">
         <h2>Yanınızdayız Projesi Nedir?</h2>
-        <p>T.C. Ticaret Bakanlığı himayelerinde, Trendyol, TOBB ve MÜSİAD iş birliğiyle hayata geçirilen Dijital Usta Yanınızdayız projesi, bölgenin yeniden cazibe merkezi haline gelmesini hedefliyor. Amacımız girişimci adaylarına dijital yetkinlikler kazandırmak, KOBİ'lerin e-ticaret hacmini büyütmek ve bölge istihdamına katkı sağlamaktır.</p>
+        <p>T.C. Ticaret Bakanlığı himayelerinde, Trendyol, TOBB ve MÜSİAD iş birliğiyle hayata geçirilen Dijital Usta Yanınızdayız projesi, bölgenin yeniden cazibe merkezi haline gelmesini hedefliyor. <br/>Amacımız girişimci adaylarına dijital yetkinlikler kazandırmak, KOBİ'lerin e-ticaret hacmini büyütmek ve bölge istihdamına katkı sağlamaktır.</p>
         <p>Proje bölgedeki bireylerin, KOBİ’lerin, kooperatiflerin ve esnafların katılımına açıktır.</p>
+        <br/>
         <p>Proje deprem bölgesindeki 4 pilot ilde uygulanmaktadır.</p>
         <ul class="cities"><li>Adıyaman</li><li>Hatay</li><li>Kahramanmaraş</li><li>Malatya</li></ul>
     </section>
