--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
 </head>
 
 <body>
-  <header>
-    <a href="./"><img src="./s/logo.png" alt="Dijital Usta" /></a>
-    <h1>Geleceği Birlikte İnşa Ediyoruz</h1>
-  </header>
+  <header><a href="./"><img src="./s/logo-header.png" alt="Yanınızdayız" /></a></header>
   <main>
     <section>
         <h1>Yanınızdayız Projesi</h1>
@@ -25,18 +22,19 @@
         <p>T.C. Ticaret Bakanlığı himayelerinde, Trendyol, TOBB ve MÜSİAD iş birliğiyle hayata geçirilen Dijital Usta Yanınızdayız projesi, bölgenin yeniden cazibe merkezi haline gelmesini hedefliyor. <br/>Amacımız girişimci adaylarına dijital yetkinlikler kazandırmak, KOBİ'lerin e-ticaret hacmini büyütmek ve bölge istihdamına katkı sağlamaktır.</p>
         <p>Proje bölgedeki bireylerin, KOBİ’lerin, kooperatiflerin ve esnafların katılımına açıktır.</p>
         <br/>
-        <p>Proje deprem bölgesindeki 4 pilot ilde uygulanmaktadır.</p>
+        <p>Proje deprem bölgesindeki 4 ilde uygulanmaktadır.</p>
         <ul class="cities"><li>Adıyaman</li><li>Hatay</li><li>Kahramanmaraş</li><li>Malatya</li></ul>
     </section>
     <section class="split">
 <div>
+<div><span>1</span><h3>Bireysel başvuranlar için</h3></div>
 <h2>Geleceğin Dijital Ustası Olmak İstiyorum</h2>
 <i>Kendini geliştir, iş fırsatlarını yakala veya kendi girişimini kur.</i>
 <h3>Sana Ne Sağlıyoruz?</h3>
 <ul>
-<li><b>Ücretsiz Eğitimler:</b> Yapay zeka kullanımı ve dijital pazarlama alanlarında kapsamlı eğitimler.</li>
-<li><b>İstihdam Fırsatı:</b> Eğitimi başarıyla tamamlayanlar, bölgedeki KOBİ'ler tarafından istihdam edilme şansı yakalar.</li>
-<li><b>Girişimcilik Desteği:</b> Kendi işinizi kurmak isterseniz, Trendyol’daki mağazanızda belirli süreli komisyon avantajları sizi bekliyor.</li>
+<li><b>Ücretsiz Eğitimler:</b> Yapay zeka kullanımı, dijital pazarlama, e-ticaret ve e-ihracat alanlarında kapsamlı eğitimler.</li>
+<li><b>İstihdam Fırsatı:</b> Eğitimi başarıyla tamamlayan bireyler, bölgedeki KOBİ'ler tarafından istihdam edilme şansı yakalar.</li>
+<li><b>Girişimcilik Desteği:</b> Kendi işinizi kurarsanız, Trendyol’daki mağazanızda belirli süreli komisyon avantajları sizi bekliyor.</li>
 </ul>
 <h3>Kimler Başvurabilir?</h3>
 <ul>
@@ -48,12 +46,13 @@
 <div class="button-row"><a href="birey.html">BİREYSEL BAŞVURU YAP</a></div>
 </div>
 <div>
+<div><span>2</span><h3>İşletme sahipleri için</h3></div>
 <h2>İşletmemi Büyütmek İstiyorum</h2>
 <i>E-ticaretle sınırları aşın, nitelikli personel desteğiyle gücünüze güç katın.</i>
 <h3>Sana Ne Sağlıyoruz?</h3>
 <ul>
 <li><b>Komisyon Avantajı:</b> Proje kapsamında eğitim alan bir genci 12 ay istihdam etmeniz durumunda, Trendyol mağazada komisyon desteği ile satış avantajından faydalanırsınız.</li>
-<li><b>Nitelikli İstihdam:</b> Dijitalleşme ve e-ticaret eğitimi almış donanımlı uzmanlarla çalışma imkânı.</li>
+<li><b>Nitelikli İstihdam:</b> Dijitalleşme ve e-ticaret konusunda eğitimli ve yetkin uzmanlarla çalışma fırsatı sağlanacak, söz konusu uzmanların istihdamına ilişkin ilk üç aylık maaş giderleri proje kapsamında karşılanacaktır.</li>
 </ul>
 <h3>Kimler Başvurabilir?</h3>
 <ul>
@@ -62,7 +61,7 @@
 <li>Aylık satış hacmi 100.000 TL'nin altında olanlar.</li>
 <li>Satılan ürünleri e-ticaret mevzuatına uygun olanlar.</li>
 </ul>
-<a href="kobi.html">KOBİ BAŞVURUSU YAP</a>
+<a href="kobi.html">İŞLETME OLARAK BAŞVURU YAP</a>
 </div>
     </section>
     <section>
@@ -84,16 +83,13 @@
           <p>Gençleri e-ticaretle buluşturup<br/>KOBİ'lere yetkin iş gücü kazandırmayı amaçlar.</p>
         </span>
         <div class="footer-logos">
-          <img src="./s/ticaret.png" alt="T.C. Ticaret Bakanlığı" />
-          <img src="./s/tobb.png" alt="TOBB" />
-          <img src="./s/trendyol.png" alt="Trendyol" />
-          <img src="./s/musiad.png" alt="MÜSİAD" />
+          <img src="./s/logo-footer.png" alt="Yanınızdayız" />
         </div>
       </div>
     </div>
     <div class="footer-bottom">
       <div class="footer-content">
-        © 2025 Dijital Usta | Tüm Haklar Saklıdır.
+        <span>© 2025 <a href="https://dijitalusta.net">Dijital Usta</a> | Tüm Haklar Saklıdır.</span>
         <a href="https://panel.dijitalusta.net/concent.html">KVKK Aydınlatma Metni ve Açık Rıza Formu</a>
       </div>
     </div>
