--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
         <h2>Hangi Eğitimleri Alacaksınız?</h2>
         <h2>Dijital dünyanın kapılarını aralayan, Trendyol Akademi destekli programımızda sizi neler bekliyor?</h2>
         <ul>
-            <li><b>💻 E-Ticaret ve Dijitalleşme:</b> Temel ve ileri seviye yetkinlikler.</li>
-            <li><b>🤖 Yapay Zeka (AI):</b> İş süreçlerinde ve dijital pazarlamada yapay zeka kullanımı.</li>
-            <li><b>🤝 Müşteri İlişkileri:</b> Trendyol Akademi Müşteri İlişkileri ve Panel Eğitimi.</li>
+            <li><b>E-Ticaret ve Dijitalleşme:</b> Temel ve ileri seviye yetkinlikler.</li>
+            <li><b>Yapay Zeka (AI):</b> İş süreçlerinde ve dijital pazarlamada yapay zeka kullanımı.</li>
+            <li><b>Müşteri İlişkileri:</b> Trendyol Akademi Müşteri İlişkileri ve Panel Eğitimi.</li>
         </ul>
     </section>
 
@@ -89,7 +89,7 @@
     </div>
     <div class="footer-bottom">
       <div class="footer-content">
-        <span>© 2025 <a href="https://dijitalusta.net">Dijital Usta</a> | Tüm Haklar Saklıdır.</span>
+        <span>© 2026 <a href="https://dijitalusta.net">Dijital Usta</a> | Tüm Haklar Saklıdır.</span>
         <a href="https://panel.dijitalusta.net/concent.html">KVKK Aydınlatma Metni ve Açık Rıza Formu</a>
       </div>
     </div>
