--- a/birey.html
+++ b/birey.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bireysel Katılımcı Başvuru Formu | Dijital Usta - Yanınızdayız</title>
-  <link rel="preconnect" href="https://api.dijitalusta.net" />
-  <link rel="stylesheet" href="./s/site.css?v=1" />
+  <link rel="preconnect" href="https://yaninizdayizapi.dijitalusta.net" />
+  <link rel="stylesheet" href="./s/site.css?v=2" />
 <link rel="icon" type="image/x-icon" href="./s/favicon.ico" />
 </head>
 
