--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Yanınızdayız | Dijital Usta</title>
-  <link rel="preconnect" href="https://api.dijitalusta.net" />
-  <link rel="stylesheet" href="./s/site.css?v=1" />
+  <link rel="preconnect" href="https://yaninizdayizapi.dijitalusta.net" />
+  <link rel="stylesheet" href="./s/site.css?v=2" />
 <link rel="icon" type="image/x-icon" href="./s/favicon.ico" />
 </head>
 
@@ -27,7 +27,7 @@
     </section>
     <section class="split">
 <div>
-<div><span>1</span><h3>Bireysel başvuranlar için</h3></div>
+<div><span>1.</span><h3>Bireysel başvuranlar için</h3></div>
 <h2>Geleceğin Dijital Ustası Olmak İstiyorum</h2>
 <i>Kendini geliştir, iş fırsatlarını yakala veya kendi girişimini kur.</i>
 <h3>Sana Ne Sağlıyoruz?</h3>
@@ -46,7 +46,7 @@
 <div class="button-row"><a href="birey.html">BİREYSEL BAŞVURU YAP</a></div>
 </div>
 <div>
-<div><span>2</span><h3>İşletme sahipleri için</h3></div>
+<div><span>2.</span><h3>İşletme sahipleri için</h3></div>
 <h2>İşletmemi Büyütmek İstiyorum</h2>
 <i>E-ticaretle sınırları aşın, nitelikli personel desteğiyle gücünüze güç katın.</i>
 <h3>Sana Ne Sağlıyoruz?</h3>
